# scanning-cavity-distortion-correction

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: algorithm.md
scdc/: __init__.py  __main__.py  calibration.py  centroids.py  cli.py  geometry.py  gui.py  io.py  lattice.py  plotting.py  polynomial.py  synthetic.py
tests/: test_calibration.py  test_centroids.py  test_cli.py  test_geometry.py  test_io.py  test_lattice.py  test_polynomial.py
